[package]
name = "bus_interface"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bxcan = {version = "0.5", optional = true}
#socketcan = {version = "0.3", optional = true}
#alloc=

[dev-dependencies]



[features]

# Defines a feature named 'Bus Master'
default = []

alloc = []
bus_master = []
sensor_module = []

