[package]
name = "bus_interface"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.6"

[dev-dependencies]

[features]

# Defines a feature named 'Bus Master'
default = ["bus_master"]

alloc = []
bus_master = []
sensor_module = []

